Update branch and fix merge conflict

--- a/Telemetry.Web/Views/Sensor/Delete.cshtml
+++ b/Telemetry.Web/Views/Sensor/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
 }
 
-@model Telemetry.Web.ViewModels.Sensor.SensorModel
+@model Telemetry.Web.ViewModels.Sensor.SensorViewModel
 
 <form asp-action="Delete" asp-controller="Sensor" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
