--- a/Telemetry.Web/Views/Sensor/Create.cshtml
+++ b/Telemetry.Web/Views/Sensor/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Sensor Controller";
 }
-@model Telemetry.Web.ViewModels.Sensor.SensorModel
+@model Telemetry.Web.ViewModels.Sensor.SensorViewModel
 
 <form asp-action="Create" asp-controller="Sensor" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
