--- a/Telemetry.Web/Views/_ViewImports.cshtml
+++ b/Telemetry.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Telemetry.Web
 @using Telemetry.Web.Models
+@using Telemetry.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
