Added list of values on value page

--- a/Telemetry.Web/Views/Sensor/Info.cshtml
+++ b/Telemetry.Web/Views/Sensor/Info.cshtml
@@ -19,7 +19,7 @@
             <tbody>
                 @foreach (var value in Model.Values)
                 {
-                    <tr><td>@value.Name</td><td>@value.Type</td></tr>
+                    <tr><td>@Html.ActionLink(value.Name, "GetValue", "Sensor", new {id = value.SensorId, name = value.Name})</td><td>@value.Type</td></tr>
                 }
             </tbody>
         </table>
