--- a/Telemetry.Web/Views/Sensor/Index.cshtml
+++ b/Telemetry.Web/Views/Sensor/Index.cshtml
@@ -4,7 +4,8 @@
 }
 <div class="row">
     <div class="col-md-12">
-        @Html.ActionLink("Добавить датчик", "Create", "Sensor")
+        <h2>Список датчиков</h2>
+        <p>@Html.ActionLink("Добавить датчик", "Create", "Sensor")</p>
     </div>
     <div class="col-md-12">
         <table class="table">
