--- a/Telemetry.Web/Views/Sensor/Create.cshtml
+++ b/Telemetry.Web/Views/Sensor/Create.cshtml
@@ -5,19 +5,21 @@
 
 <form asp-action="Create" asp-controller="Sensor" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
-    <div>
-        <div>
-            <label asp-for="Name">Название датчика</label><br />
-            <input type="text" asp-for="Name" />
-            <span asp-validation-for="Name" />
-        </div>
-        <div>
-            <label asp-for="Description">Описание датчика</label><br />
-            <input asp-for="Description" />
-            <span asp-validation-for="Description" />
-        </div>
-        <div>
-            <input type="submit" value="Создать" />
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label asp-for="Name">Название датчика</label><br />
+                <input class="form-control" type="text" asp-for="Name" />
+                <span asp-validation-for="Name" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Description">Описание датчика</label><br />
+                <input class="form-control" asp-for="Description" />
+                <span asp-validation-for="Description" />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit">Создать</button>
+            </div>
         </div>
     </div>
 </form>
