--- a/Telemetry.Web/Views/User/Login.cshtml
+++ b/Telemetry.Web/Views/User/Login.cshtml
@@ -2,23 +2,25 @@
 
 <h2>Вход на сайт</h2>
 
-<a asp-action="Register" asp-controller="User">Регистрация</a>
+<p>Нет аккаунта? <a asp-action="Register" asp-controller="User">Зарегистрируйтесь</a></p>
 
 <form asp-action="Login" asp-controller="User" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
-    <div>
-        <div class="form-group">
-            <label asp-for="Email">Введите Email</label>
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn" />
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="Email">Введите Email</label>
+                <input class="form-control" type="text" asp-for="Email" />
+                <span asp-validation-for="Email" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Password">Введите пароль</label>
+                <input class="form-control" asp-for="Password" />
+                <span asp-validation-for="Password" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Войти" class="btn" />
+            </div>
         </div>
     </div>
 </form>
