--- a/Telemetry.Web/Views/User/Register.cshtml
+++ b/Telemetry.Web/Views/User/Register.cshtml
@@ -4,24 +4,26 @@
 
 <form asp-action="Register" asp-controller="User" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly" />
-    <div>
-        <div>
-            <label asp-for="Email">Введите Email</label><br />
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
-        </div>
-        <div>
-            <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div>
-            <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword" />
-        </div>
-        <div>
-            <input type="submit" value="Регистрация" />
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label asp-for="Email">Введите Email</label><br />
+                <input class="form-control" type="text" asp-for="Email" />
+                <span asp-validation-for="Email" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Password">Введите пароль</label><br />
+                <input class="form-control" asp-for="Password" />
+                <span asp-validation-for="Password" />
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword">Повторите пароль</label><br />
+                <input class="form-control" asp-for="ConfirmPassword" />
+                <span asp-validation-for="ConfirmPassword" />
+            </div>
+            <div>
+                <input type="submit" value="Регистрация" class="btn"/>
+            </div>
         </div>
     </div>
 </form>
